新增Store html&css

--- a/StorePage.html
+++ b/StorePage.html
@@ -9,15 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
-    <!-- My Style -->
-    <link rel="stylesheet" href="./css/react.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/StoryPage.css">
-    <title>Story</title>
+     <!-- My Style -->
+     <link rel="stylesheet" href="css/StorePage.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Store</title>
 </head>
 <body>
-    
-   <!-- 底圖 -->
+      <!-- 底圖 -->
 <div class="wrapper">
     <!-- TOP -->
     <header>
@@ -54,28 +52,64 @@
 
     </header>
 
-    <!-- main -->
 
-    <section class="logoWrapper">
+    <!-- main-top -->
 
-        <div class="logoImg">
-            <img src="./img/Logo.svg" alt="">
+    <section class="storeWrapper">
+
+        <h1>STORE</h1>
+
+    </section>
+
+    <section class="storeMain">
+
+        <div class="storeLe">
+
+            <ul>
+                <li class="storeTitle">
+                    <img src="./img/icons_beer-white.svg" alt="">
+                    <h2>營業時間</h2>
+                </li>
+                <li class="storeIndex">
+                    <p>週一至週日 10:00-24:00</p>
+                    <p>※ 最後點餐時間為23:00</p>
+                </li>
+                <li class="storeIndex">
+                    <p>下午茶 14:00-17:00</p>
+                    <p>※ 下午茶為預約制，需提前一天預訂。</p>
+                </li>
+            </ul>
+
+            <ul>
+                <li class="storeTitle">
+                    <img src="./img/icons_beer-white.svg" alt="">
+                    <h2>餐廳座位</h2>
+                </li>
+                <li class="storeIndex">
+                    <p>25人</p>
+                    <p>※ 本飯店加收自備酒水侍應費，
+                        每瓶NT$500</p>
+                </li>
+            </ul>
+
+            <ul>
+                <li class="storeTitle">
+                    <img src="./img/icons_beer-white.svg" alt="">
+                    <h2>訂位資訊</h2>
+                </li>
+                <li class="storePhoto">
+                    <p>02-27120589</p>
+                </li>
+            </ul>
+
         </div>
 
-    </section>
-
-
-    <!-- main-bottom -->
-
-    <section class="storyText">
-
-        <h1>STORY</h1>
-
-        <p>在drück BAR，我們將80、90年代的街機靈魂重新喚醒，打造一個結合復古像素美學與現代調酒文化的獨特空間。每一道燈光、每一首BGM，都是對電玩黃金年代的致敬。這裡不只是酒吧，更是大人們的遊樂場，一杯在手、一局在心，讓你與好友一起在記憶與酩酊中雙重闖關！</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.467687227!2d121.54067797689666!3d25.052132837558343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1750573758067!5m2!1szh-TW!2stw" width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>   
 
     </section>
 
-       <!-- Footer -->
+
+    <!-- Footer -->
 
     <footer>
 
@@ -113,7 +147,22 @@
 
     </footer>
 
-</div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 </body>
 </html>
