修正HomePage動態效果&Events文案撰寫

--- a/Events.html
+++ b/Events.html
@@ -73,8 +73,8 @@
                             <a href="#">
                                 <img src="./img/icons_beer-white.svg" alt="" class="imgLe">
                             <div class="eventText">
-                                <h2>123123</h2>
-                                <p>123123123</p>
+                                <h2>勇者挑戰之夜</h2>
+                                <p>今晚進入像素世界，只要成功破關指定關卡，即可免費喝下一杯勝利Shot，成為真正的勇者！</p>
                                 <span></span>
                             </div>
                                 <img src="./img/icon_ra.svg" alt="" class="imgRi">
@@ -84,8 +84,8 @@
                             <a href="#">
                                 <img src="./img/icons_beer-white.svg" alt="" class="imgLe">
                             <div class="eventText">
-                                <h2>123123</h2>
-                                <p>123123123</p>
+                                <h2>8-bit音樂派對</h2>
+                                <p>復古音樂與懷舊電玩完美融合，讓你在像素節奏中跳舞放電，今晚只聽8-bit經典神曲！</p>
                                 <span></span>
                             </div>
                                 <img src="./img/icon_ra.svg" alt="" class="imgRi">
@@ -95,8 +95,8 @@
                             <a href="#">
                                 <img src="./img/icons_beer-white.svg" alt="" class="imgLe">
                             <div class="eventText">
-                                <h2>123123</h2>
-                                <p>123123123</p>
+                                <h2>雙人合作大亂鬥</h2>
+                                <p>邀請你的隊友一起挑戰雙人遊戲，破關就能一起獲得限定聯名調酒，兄弟/情侶一起喝更有味！</p>
                                 <span></span>
                             </div>
                                 <img src="./img/icon_ra.svg" alt="" class="imgRi">
@@ -106,8 +106,8 @@
                             <a href="#">
                                 <img src="./img/icons_beer-white.svg" alt="" class="imgLe">
                             <div class="eventText">
-                                <h2>123123</h2>
-                                <p>123123123</p>
+                                <h2>喝一杯打Boss</h2>
+                                <p>每當你打敗一隻Boss，就能解鎖隱藏版特調，喝出不同關卡的驚喜風味，今晚你有幾條命？</p>
                                 <span></span>
                             </div>
                                 <img src="./img/icon_ra.svg" alt="" class="imgRi">
@@ -117,8 +117,8 @@
                             <a href="#">
                                 <img src="./img/icons_beer-white.svg" alt="" class="imgLe">
                             <div class="eventText">
-                                <h2>123123</h2>
-                                <p>123123123</p>
+                                <h2>角色Cosplay之夜</h2>
+                                <p>只要你穿上經典遊戲角色服裝來店，立刻享有8折優惠，還有機會參加Cos大賽贏大獎！</p>
                                 <span></span>
                             </div>
                                 <img src="./img/icon_ra.svg" alt="" class="imgRi">
