--- a/HomePage.html
+++ b/HomePage.html
@@ -59,9 +59,14 @@
 
        <section class="cycle">
 
-            <!-- <a href="" class="la"><img src="./img/icon_la.svg" alt=""></a> -->
+         <!-- 圖片區 -->
+        <div class="cycleImgList">
 
-            <!-- <a href="" class="ra"><img src="./img/icon_ra.svg" alt=""></a> -->
+            <div class="cycleImg"><img src="./img/big_pic.jpg" alt=""></div>
+            <div class="cycleImg"><img src="./img/big_pic2.jpg" alt=""></div>
+            <div class="cycleImg"><img src="./img/big_pic3.jpg" alt=""></div>
+
+        </div>
 
        </section> 
 
@@ -69,12 +74,19 @@
 
        <section class="story">
 
-            <h1>Cheers, Hero!</h1>
+            <h1 class="h1Type">Cheers, Hero!</h1>
 
             <div class="img-gif"></div>
 
-            <p>The challenge isn't just in the game — it's in every drink. Retro pixel vibes, pure gaming soul.<br>
-            <br>Every glass is a boss fight. Drink up, make your legend.</p>
+            <p>
+                <span class="pLine1">
+                    The challenge isn't just in the game — it's in every drink. Retro pixel vibes, pure gaming soul.
+                    </span><br><br>
+
+                <span class="pLine2">
+                    <span class="sentence s1">Every glass is a boss fight.Drink up, make your legend.</span>
+                </span>
+            </p>
             
         </section>
         
