--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>MyProject</title>
 </head>
 <body>
-    <a href="HomePage.html"></a>
+    <a href="HomePage.html">點此</a>
 </body>
 </html>
