--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyProject</title>
-</head>
-<body>
-    <a href="HomePage.html">點此</a>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url=HomePage.html" />
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>Redirecting to <a href="HomePage.html">HomePage.html</a>...</p>
+  </body>
 </html>
