HomePage JScode updata &CSS調正

--- a/HomePage.html
+++ b/HomePage.html
@@ -123,6 +123,7 @@
             </ul>
 
        </section>
+
   
     <!-- 最新菜單 -->
 
@@ -164,27 +165,47 @@
     <!-- 照片影集 -->
      <section class="photoWrapper">
 
-       <div class="photoTop">
+        <div class="photoTop">
 
-            <ul>
-                <li>
-                    <img src="./img/photo_left1.jpg" alt="">
+            <ul class="photoTopList">
+                <li class="photoLeft1">
+                    <div class="photoLeft1Text">
+                        Red like rage, sweet like sin—press start to begin.
+                    </div> 
+                    <div class="photoLeft1Img"> 
+                        <img src="./img/photo_left1.jpg" alt="">
+                    </div> 
                 </li>
 
-                <li>
-                    <img src="./img/photo_left_2.jpg" alt="">
+                <li class="photoLeft2">
+                    <div class="photoLeft2Text">
+                        Sip the blue. MP full. Cast away your blues.
+                    </div> 
+                    <div class="photoLeft2Img">
+                        <img src="./img/photo_left_2.jpg" alt="">
+                    </div>
                 </li>
 
-                <li>
-                    <img src="./img/photo_right_1.jpg" alt="">
+                <li class="photoRight1">
+                    <div class="photoRight1Text">
+                        Darkness served neat. One sip to vanish the night.
+                    </div> 
+                    <div class="photoRight1Img">
+                        <img src="./img/photo_right_1.jpg" alt="">
+                    </div>
                 </li>
 
-                <li>
-                    <img src="./img/photo_right_2.jpg" alt="">
+                <li class="photoRight2">    
+                    <div class="photoRight2Text">
+                        Zest of life, glow of green—cheers to the next round.
+                    </div> 
+                    <div class="photoRight2Img">
+                        <img src="./img/photo_right_2.jpg" alt="">
+                    </div>
                 </li>
 
             </ul>
-
+        <script src="./js/userImg.js"></script>
         </div>
         
         <h3>Photo</h3>
