--- a/MenuPage.html
+++ b/MenuPage.html
@@ -42,7 +42,7 @@
             
                 <li><a href="ContactPage.html">Contact</a></li>
 
-                <li><a href="#">Online Shop</a></li>
+                <li><a href="OnlineShop.html">Online Shop</a></li>
           
             </ul>
 
