--- a/Events.html
+++ b/Events.html
@@ -41,7 +41,7 @@
             
                 <li><a href="ContactPage.html">Contact</a></li>
 
-                <li><a href="#">Online Shop</a></li>
+                <li><a href="OnlineShop.html">Online Shop</a></li>
           
             </ul>
 
