--- a/StorePage.html
+++ b/StorePage.html
@@ -40,7 +40,7 @@
             
                 <li><a href="ContactPage.html">Contact</a></li>
 
-                <li><a href="#">Online Shop</a></li>
+                <li><a href="OnlineShop.html">Online Shop</a></li>
           
             </ul>
 
