fixed header&footer css

--- a/Events.html
+++ b/Events.html
@@ -11,6 +11,8 @@
 
      <!-- My Style -->
      <link rel="stylesheet" href="css/Events.css">
+     <link rel="stylesheet" href="css/header.css">
+     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Events</title>
 </head>
