--- a/MenuPage.html
+++ b/MenuPage.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
     <!-- My Style -->
-    <link rel="stylesheet" href="./css/react.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/MenuPage.css">
     <title>Menu</title>
