--- a/HomePage.html
+++ b/HomePage.html
@@ -10,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
-     <!-- My Style -->
-     <link rel="stylesheet" href="css/HomePage.css">
+    <!-- My Style -->
+     <link rel="stylesheet" href="css/header.css">
+     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/HomePage.css">
     <link rel="stylesheet" href="css/style.css">
     <title>drunk Bar</title>
 </head>
