--- a/StorePage.html
+++ b/StorePage.html
@@ -11,6 +11,8 @@
 
      <!-- My Style -->
      <link rel="stylesheet" href="css/StorePage.css">
+     <link rel="stylesheet" href="css/header.css">
+     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Store</title>
 </head>
