輪播圖區slider js Add

--- a/ContactPage.html
+++ b/ContactPage.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
      <!-- My Style -->
+     <link rel="icon" href="./img/webicon.jpg">
      <link rel="stylesheet" href="css/ContactPage.css">
      <link rel="stylesheet" href="css/header.css">
      <link rel="stylesheet" href="css/footer.css">
