--- a/HomePage.html
+++ b/HomePage.html
@@ -11,14 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
     <!-- My Style -->
-     <link rel="stylesheet" href="css/header.css">
-     <link rel="stylesheet" href="css/footer.css">
+    <link rel="icon" href="./img/webicon.jpg">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/HomePage.css">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- My JS -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
      <script src="./js/hamBurger.js"></script>
+     <script src="./js/slider.js"></script>
     <title>drunk Bar</title>
 </head>
 <body>
@@ -70,13 +72,15 @@
        <section class="cycle">
 
          <!-- 圖片區 -->
-        <div class="cycleImgList">
+        <ul class="cycleImgList">
 
-            <div class="cycleImg"><img src="./img/big_pic.jpg" alt=""></div>
-            <div class="cycleImg"><img src="./img/big_pic2.jpg" alt=""></div>
-            <div class="cycleImg"><img src="./img/big_pic3.jpg" alt=""></div>
+            <li class="cycleImg"><img src="./img/big_pic.jpg" alt=""></li>
+            <li class="cycleImg"><img src="./img/big_pic2.jpg" alt=""></li>
+            <li class="cycleImg"><img src="./img/big_pic3.jpg" alt=""></li>
 
-        </div>
+        </ul>
+
+            <ul id="contentButton"></ul>
 
        </section> 
 
