RWD_fixed_HomePage

--- a/HomePage.html
+++ b/HomePage.html
@@ -21,6 +21,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
      <script src="./js/hamBurger.js"></script>
      <script src="./js/slider.js"></script>
+     <script src="./js/RWD_photoscroll.js"></script>
     <title>drunk Bar</title>
 </head>
 <body>
@@ -177,7 +178,7 @@
 
    
     <!-- 照片影集 -->
-     <section class="photoWrapper">
+    <section class="photoWrapper">
 
         <div class="photoTop">
 
