整體全斷點RWD修正、新增進度條

--- a/HomePage.html
+++ b/HomePage.html
@@ -22,12 +22,19 @@
      <script src="./js/hamBurger.js"></script>
      <script src="./js/slider.js"></script>
      <script src="./js/RWD_photoscroll.js"></script>
+     <script src="./js/proGress.js"></script>
     <title>drunk Bar</title>
 </head>
 <body>
     <!-- 底圖 -->
 <div class="wrapper">
     <!-- TOP -->
+    <div class="progress-bar">
+        <div class="progress-inner">
+        <img src="./img/pacman_TOP.gif" alt="icon">
+        </div>
+    </div>
+
     <header>
 
             <a href="HomePage.html">
