--- a/StorePage.html
+++ b/StorePage.html
@@ -18,12 +18,20 @@
      <!-- My JS -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
      <script src="./js/hamBurger.js"></script>
+     <script src="./js/StoreLeftScroll.js"></script>
+     <script src="./js/proGress.js"></script>
     <title>Store</title>
 </head>
 <body>
       <!-- 底圖 -->
 <div class="wrapper">
     <!-- TOP -->
+    <div class="progress-bar">
+        <div class="progress-inner">
+        <img src="./img/pacman_TOP.gif" alt="icon">
+        </div>
+    </div>
+
     <header>
 
             <a href="HomePage.html">
