--- a/MenuPage.html
+++ b/MenuPage.html
@@ -18,6 +18,7 @@
     <!-- My JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/hamBurger.js"></script>
+    <script src="./js/proGress.js"></script>
     <title>Menu</title>
 </head>
 <body>
@@ -25,6 +26,12 @@
    <!-- 底圖 -->
 <div class="wrapper">
     <!-- TOP -->
+    <div class="progress-bar">
+        <div class="progress-inner">
+        <img src="./img/pacman_TOP.gif" alt="icon">
+        </div>
+    </div>
+
     <header>
 
             <a href="HomePage.html">
