StorePage增加隨機點綴grid

--- a/StoryPage.html
+++ b/StoryPage.html
@@ -19,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/hamBurger.js"></script>
     <script src="./js/proGress.js"></script>
+    <script src="./js/gridColor.js"></script>
     <title>Story</title>
 </head>
 <body>
@@ -91,6 +92,8 @@
         <h1>STORY</h1>
 
         <p>在drück BAR，我們將80、90年代的街機靈魂重新喚醒，打造一個結合復古像素美學與現代調酒文化的獨特空間。每一道燈光、每一首BGM，都是對電玩黃金年代的致敬。這裡不只是酒吧，更是大人們的遊樂場，一杯在手、一局在心，讓你與好友一起在記憶與酩酊中雙重闖關！</p>
+
+        <div class="gridOverlay"></div>
 
     </section>
 
